# retrieval_and_reasoning_research

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: __init__.py  config.py  schemas.py
app/evaluation/: __init__.py  retrieval.py
app/experiments/: __init__.py  tokenization.py
app/rag/: __init__.py  chunking.py  embeddings.py  pipeline.py  reasoning.py  vector_store.py
app/web/: app.js  index.html  styles.css
data/sample_data/: documents.jsonl  evaluation_cases.json
docs/: current_app_snapshot.md
tests/: test_chunking.py  test_evaluation.py  test_pipeline.py
