[project]
name = "retrieval-and-reasoning-research"
version = "0.1.0"
description = "A multilingual RAG research platform for retrieval and reasoning experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "openai>=1.30.0",
]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app*"]
